--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <!-- <link type="text/css" rel="stylesheet" href="style.css"/> -->
-    <title> Try Plot this </title>
+    <title> World Map Pictures </title>
     <!-- Photo Slides inside the webpage -->
     <script src="js/jquery.flexslider-min.js"></script>
 	<link rel="stylesheet" href="css/flexslider.css" />     
