--- a/index.html
+++ b/index.html
@@ -25,24 +25,6 @@
 
     <style type="text/css">     
 
-.node circle {
-  cursor: pointer;
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-.node text{
-  font-size: 11px;
-  font-color: #000;
-}
-
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
-
 #pictureSlider {
   width:640px;
   height:480px;
@@ -65,18 +47,7 @@
   stroke-width: 2;
 }
 
-rect {
-    fill: none;
-    pointer-events: all;
-}
-
-#svgOmgHearts {
-    background: #000;
-}
-
-
-svg {margin-left:auto; margin-right: auto;} <!-- display: block;} -->
-.divCentered {margin-left:auto; margin-right: auto; display: block;}
+svg {margin-left:auto; margin-right: auto;}
 
 #wrap  {
   width: 1280;
@@ -89,7 +60,6 @@ svg {margin-left:auto; margin-right: auto;} <!-- display: block;} -->
 }
 
     </style>
-    <!-- <script data-main="scripts/main" src="scripts/require.js"></script> -->
   </head>
   <body>
     
@@ -104,7 +74,7 @@ svg {margin-left:auto; margin-right: auto;} <!-- display: block;} -->
      <div width="480px" height="500px" 
           style="display:inline-block; vertical-align:top;">
        <svg height="5px"></svg> <!-- To make some space -->
-       <svg id="worldMap" style='background:rgb(120, 120, 255)'></svg>
+       <svg id="worldMap" style='background:#2e7bcf'></svg>
      </div>
      <div width="480px" height="500px" 
           style="display:inline-block; vertical-align:top" >
