--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
   height:480px;
 }
 
+.background {
+  background:#2e7bcf;
+}
+
+.overlay {
+  fill: none;
+  pointer-events: all;
+}
+
 .land {
   fill: #000;
 }
@@ -47,6 +56,7 @@
 }
 
 svg {margin-left:auto; margin-right: auto;}
+svg:not(:root) { overflow: hidden; }
 
 #wrap  {
   width: 1280;
